# SpeechLLM

./: .bandit.yml  .env.sample  .gitignore  .pylintrc  README.md  makefile  pyproject.toml
.githooks/: pre-push
.github/workflows/: lint.yml
configs/: config.yaml  config_debug.yaml  context_distill.yaml
configs/DataBase/: default.yaml
configs/callbacks/: default.yaml
configs/data_module/: cot.yaml  default.yaml  mixed.yaml  mixed_cot.yaml  mixed_cot_soda_audio.yaml  mixed_implcot_soda_audio.yaml  mixed_implicit_cot.yaml  soda.yaml  soda_distill_implcot.yaml  soda_distill_implcot_debug.yaml  soda_implcot.yaml  text_conversation_interface.yaml
configs/database/: default.yaml  sockeye.yaml
configs/lightning_module/: default.yaml
configs/logger/: default.yaml
configs/losses/: default.yaml  distill.yaml  overfit.yaml
configs/model/: anygpt.yaml  context_distill.yaml  frozen_context_distill.yaml  qwen_lora.yaml
configs/paths/: default.yaml  laion.yaml  sockeye.yaml
configs/trainer/: cpu.yaml  default.yaml  hpu.yaml  hpu_8bit.yaml  hpu_ddp.yaml  hpu_deepspeed.yaml  hpu_profiler.yaml  hpu_short.yaml  hpu_simpleprofiler.yaml  overfit.yaml  overfit_ddp.yaml
data/gigaspeech_processing/: clean_and_extract_subset_segments.py  preprocess_data.py
scripts/: train_val_split.py
src/: lower_list.txt
src/speechllm/: logger.py  losses.py  main.py  trainer.py  utils.py
src/speechllm/data/: collate.py  datamodule.py  pipeline.py  processes.py  prompter.py  utils.py
src/speechllm/data/gigaspeech/: pipeline.py  processes.py
src/speechllm/data/soda/: pipeline.py  processes.py
src/speechllm/data_generation/: audio2tokens.py  main.py  processes.py  qwenaudio.py
src/speechllm/data_generation/gigaspeech/: main.py
src/speechllm/data_generation/gigaspeech/speechcolab/utils/: download.py
src/speechllm/data_generation/soda_audio/: main.py  processes.py
src/speechllm/data_generation/speechcolab/datasets/: gigaspeech.py
src/speechllm/models/: anygpt.py  teacher_anygpt.py
src/speechllm/models/impl/: gaudillama.py
src/speechllm/models/modules/: anygpt.py
src/speechllm/soundstorm_speechtokenizer/: attend.py  decode.py  soundstorm.py
